# auto_posting_bot

./: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run_polling.py
migrations/: env.py
migrations/versions/: 03418d07a827_db_creation.py  d82a4616f51d_database_creation.py
src/: .env.template  config.py
src/core/: crud.py  database.py  models.py
src/handers/: add_remove_channel.py  admin.py  autoposting.py  channel_manage.py  common.py  edit_post.py  mock.py  moderation.py  post_manage.py  remove_post.py  utils.py
src/handers/manage_channels/: add_channel.py  add_remove_channel.py  channel_manage.py  channels_main.py  list_channels.py  remove_channel.py  view_channel.py
src/handers/manage_posts/: create_post.py  edit_post.py  list_posts.py  post_manage.py  posts_main.py  remove_post.py  view_post.py
src/handlers/: admin.py  common.py  mock.py  utils.py
src/handlers/manage_channels/: add_channel.py  channels_main.py  list_channels.py  remove_channel.py  view_channel.py
src/handlers/manage_posts/: create_post.py  list_posts.py  posts_main.py  remove_post.py  shedule.py  view_post.py
src/middlewares/: db_middleware.py  logging_middleware.py
src/trash/: admin.py
src/utils/: connect_to_services.py  logger.py  smart_session.py
