[project]
name = "bot-auto-poster"
version = "0.1.0"
description = ""
authors = [
    {name = "box7",email = "theverynvg@vk.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "orjson (>=3.10.16,<4.0.0)",
    "structlog (>=25.3.0,<26.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "alembic (==1.14.0)",
    "sqlalchemy[asyncio] (==2.0.36)",
    "asyncpg (==0.30.0)",
    "psycopg2 (==2.9.10)",
    "tenacity (>=9.1.2,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
